# CareerOS

./: .env.example  .gitignore  README.md  campusiq_workflow_diagram.md  pyproject.toml
CampusIQ_career/: README.md  ai_services.py  campus_iq_prompt_FIT.md  campus_iq_prompt_GAP.md  campus_iq_prompt_SHIFT.md  system_prompt.md
CampusIQ_career/ai/: __init__.py  errors.py  model_config.py  openrouter_client.py  parser.py  types.py
CampusIQ_career/context_prompts/: fit_prompt.md  gap_prompt.md  shift_prompt.md
CampusIQ_career/demo/: campus_iq_test.py
CampusIQ_career/features/: __init__.py  base.py  fit.py  gap.py  orchestrator.py  shift.py
CampusIQ_career/mock_student_profiles/: tamu-001-base.json  tamu-002-gap.json  tamu-003-shift.json  tamu-004-fit.json  tamu-005-gap.json
data/: build_catalog.py  scrape_catalog.py  validate_catalog.py
data/catalog/: add_catalog_sources.py  audit_catalog_expansion.py  normalize_catalog.py  scrape_approved_subjects.py  validate_catalog.py
data/catalog/business/: business.json  (+1 more)
data/reference/: catalog_expansion_audit.md  catalog_schema.md  tamu_gpa_rules.md  unified_student_schema.md
data/students/: student_ethanBrooks.json  student_jordanReyes.json  student_marcusWebb.json  student_priyaNair.json  student_sofiaRamirez.json  validate_students.py
docs/: unified_student_schema.md
docs/plans/: react-dashboard-plan.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
tests/: test_ai_phase1.py  test_career_features.py  test_career_orchestrator.py  test_demo_imports.py
(+51 files in other folders)
