[project]
name = "campus-iq"
version = "0.1.0"
description = "AI-powered career and academic companion for Texas A&M students"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.111.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
